@startuml Senha

class PasswordManager {
    +create_pwd()
    +create_attendance()
}


class NormalAttendance{
    +String attandance_type
    
    +create_pwd()
}

class PriorityAttendance{
    +String attandance_type
    
    +create_pwd()
}

interface PasswordGenerator{
    +generate_pwd()
    +save_history()
}

class NormalPwd{
    +String attandance_type
    +int init
    +int password
    +int last_password

    +generate_pwd()
    +save_history()
}

class PriorityPwd {
    +String attandance_type
    +int init
    +int password
    +int last_password

    +generate_pwd()
    +save_history()
}

PasswordGenerator --- NormalPwd
PasswordGenerator --- PriorityPwd
PasswordManager --- PasswordGenerator
PasswordManager --> NormalAttendance
PasswordManager --> PriorityAttendance

@enduml
